# unfolder

./: .gitignore  .gitmodules  Makefile.am  README.md  client.cpp  configure.ac  unfolder.cpp
lib/: client.cpp  client.h  connection.cpp  connection.h  dag.cpp  dag.h  dag_state.cpp  dag_state.h  io.cpp  io.h  machine.cpp  machine.h  machine_list.cpp  machine_list.h  semaphore.cpp  semaphore.h  server.cpp  server.h
libaddict/: addict.cpp  addict_dag.h  addict_parser.cpp  addict_parser.h  reader.cpp  reader.h  tools.cpp  tools.h
libaddict/examples/: lamp.add  misc.add  misc_extra.add  names.add  names_extra.add  todo.add
libaddict/examples/apps/: lotus.add
libaddict/examples/langs/: asp.add  go.add  java.add  php.add
libaddict/examples/os/: windows.add
libaddict/examples/servers/: apache.add  iis.add  nginx.txt
libaddict/examples/test/: ext.add  pages.add  words.add
libddag/: ddag.cpp  ddag.h
