bin_PROGRAMS = unfolder unfolder-client

unfolder_SOURCES = \
	unfolder.cpp \
	libddag/ddag.cpp \
	lib/client.cpp \
	lib/dag.cpp \
	lib/dag_state.cpp \
	lib/io.cpp \
	lib/machine.cpp \
	lib/machine_list.cpp \
	lib/server.cpp \
	lib/semaphore.cpp

unfolder_client_SOURCES = \
	client.cpp \
	libddag/ddag.cpp \
	lib/client.cpp \
	lib/dag.cpp \
	lib/dag_state.cpp \
	lib/io.cpp \
	lib/machine.cpp \
	lib/machine_list.cpp \
	lib/server.cpp \
	lib/semaphore.cpp

AM_CXXFLAGS = -Wall -Werror -std=c++11
